trunk/Archive2/de/60262cf153c327/output
main.cpp: In function 'int main()':
main.cpp:8:27:   in constexpr expansion of 'f(0)'
main.cpp:4:59: error: expression '<throw-expression>' is not a constant-expression
     return x > 0 ? x * 10 : throw std::runtime_error("...");
                                                           ^
main.cpp:8:20: warning: unused variable 'x' [-Wunused-variable]
     constexpr auto x = f(0);
                    ^
